--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^15.1.0",
     "@types/node": "^14.14.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "dotenv": "^8.2.0",
+    "rollup-plugin-inject-process-env": "^1.3.0",
     "rollup-plugin-typescript2": "^0.28.0",
     "typescript": "^4.0.3"
   },
